--- a/src/mongo/db/dedup/SConscript
+++ b/src/mongo/db/dedup/SConscript
@@ -8,19 +8,11 @@ myenv = env.Clone()
 myenv.Append(CCFLAGS='-Wno-reorder')
 myenv.Append(CCFLAGS='-Wno-sign-compare')
 
-#chunkFiles = [  "chunking/basic_chunking.cpp",
-                #"chunking/rabin64_polynomials.cpp",
-                #"chunking/rabin_chunking.cpp",
-                #"chunking/sha1.cpp",
-                #"chunking/rabin64_hash.cpp",
-                #"chunking/rabin64_table.cpp"]
-
 chunkFiles = [
     "chunking/sha1.cpp",
     "chunking/rabinpoly.cpp",
     "chunking/msb.cpp",
     "chunking/rabin_chunking.cpp"] 
-
 
 indexFiles = [  "indexing/chunk_index.cpp",
                 "indexing/cuckoo_hash.cpp",
@@ -29,10 +21,5 @@ indexFiles = [  "indexing/chunk_index.cpp",
                 "indexing/page_data.cpp",
                 "dedup_setup.cpp"]
 
-myenv.Library(
-    "rabin_chunk",
-    chunkFiles)
-
-myenv.Library(
-    "chunk_index",
-    indexFiles)
+myenv.Library( "rabin_chunk", chunkFiles)
+myenv.Library( "chunk_index", indexFiles)
